--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-BASE_LOCAL_API=http://localhost:3000/api/
-BASE_API=http://149.102.136.93:3023/api/
+APP_PORT=4021
+BASE_LOCAL_API=http://localhost:${APP_PORT}/api/
+NEXT_PUBLIC_BASE_API=https://austeread-api.grendy.dev/api/
 NEXT_PUBLIC_REACT_APP_SITE_KEY='6LdofL0cAAAAAJKzNJiDD8xZcoG6FlWqfVb-xeIm'
 NEXT_PUBLIC_REACT_APP_GOOGLE_CLIENT_ID='6LdofL0cAAAAAAGeXv8bYPWobyQm7kNI8RPqgYgo'
