--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.2",
     "axios-hooks": "^4.0.0",
+    "cookies-next": "^2.1.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "intercept-stdout": "^0.1.2",
@@ -30,7 +31,10 @@
     "react-icons": "^4.7.1",
     "react-tooltip": "^5.7.4",
     "recoil": "^0.7.6",
+    "san-tooltip": "^1.0.123",
     "sharp": "^0.31.3",
+    "styled-components": "^5.3.6",
+    "sweetalert2": "^11.7.2",
     "tailwind-merge": "^1.9.1",
     "typescript": "4.9.5"
   },
