--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sharp": "^0.31.3",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.7.2",
+    "swr": "^2.0.3",
     "tailwind-merge": "^1.9.1",
     "typescript": "4.9.5"
   },
